# HammingCode

./: CMakeLists.txt  Conversores.cpp  Conversores.h  ErrorDetection.cpp  ErrorDetection.h  binaryApp  gui.cpp  hamming.cpp  hamming.h  main.cpp
TestGui/: Conversores.cpp  ErrorDetection.cpp  TestGui.pro  hamming.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
